@@ -9,6 +9,7 @@
         <control type="group">
             <posx>col-19-begin</posx>
             <posy>83</posy>
+			<visible>!Window.IsActive(fullscreenvideo)</visible>
             <!--animations-->
             <animation type="Windowclose">
                 <effect type="fade" start="100" end="0" time="400" tween="sine" />
