@@ -13,6 +13,9 @@
 - [MODIFIED] Recent videos / tvshows increased to 10 per category (thanks Leefur)
 - [MODIFIED] Contrast for selected / unselected increased slightly (thanks Leefur, Sp@ce_Boy)
 - [FIXED] Scrolling on weather labels (thanks PaulVT)
+- [NEW] Buffering label added to progress bar (thanks CharredChar)
+- [MODIFIED] Notifications are suppressed if a video is playing (thanks PaulVT)
+- [FIXED] Some lists not wrapping properly (thanks PaulVT)
 
 [B]1.0.3[/B]
 - [FIXED] Media source dialog (thanks Keli)
